--- a/source/_patterns/_mixins.scss
+++ b/source/_patterns/_mixins.scss
@@ -9,6 +9,14 @@
   margin-left: -50vw;
   margin-right: -50vw;
 }
+@mixin calculated-fullwidth-element($spacing: 0px) {
+  width: calc(100vw - #{2*$spacing});
+  position: relative;
+  left: 50%;
+  right: 50%;
+  margin-left: calc(-50vw + #{$spacing});
+  margin-right: calc(-50vw + #{$spacing});
+}
 
 /* padding for text elements in the article */
 @mixin article-text-padding {
